fix(ops): prevent implicit exception overwrites
